05-apps/00-apps-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech-apps
  namespace: fintech
