05-apps/04-fintech-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-consumer
  namespace: fintech-apps
  labels:
    app: fintech-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-consumer
  template:
    metadata:
      labels:
        app: fintech-consumer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      imagePullSecrets:
      - name: gitlab-registry-secret
      containers:
      - name: worker
        image: registry.gitlab.com/detoran13/fintech-core-infrastructure/consumer:latest
        ports:
          - containerPort: 8081
            name: health
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 15
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
