05-apps/03-fintech-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-producer
  namespace: fintech-apps
  labels:
    app: fintech-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-producer
  template:
    metadata:
      labels:
        app: fintech-producer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      imagePullSecrets:
      - name: gitlab-registry-secret
      containers:
      - name: api
        image: registry.gitlab.com/detoran13/fintech-core-infrastructure/producer:latest
        ports:
          - containerPort: 8080
            name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fintech-producer
  namespace: fintech-apps
spec:
  selector:
    app: fintech-producer
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
