05-apps/07-fintech-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-frontend
  namespace: fintech-apps
  labels:
    app: fintech-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-frontend
  template:
    metadata:
      labels:
        app: fintech-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
      - name: web
        image: nginx:alpine
        ports:
          - containerPort: 80
            name: http
        resources:
          limits: { cpu: 100m, memory: 128Mi }
          requests: { cpu: 50m, memory: 64Mi }
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: frontend-source
---
apiVersion: v1
kind: Service
metadata:
  name: fintech-frontend
  namespace: fintech-apps
spec:
  selector:
    app: fintech-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-unified-ingress
  namespace: fintech-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: fintech.local
    http:
      paths:
      - path: /transfer
        pathType: Prefix
        backend:
          service:
            name: fintech-producer
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fintech-frontend
            port:
              number: 80
